Bug 1584793 - Add in-content colors to autocomplete richlistbox for dark mode r=dao
Differential Revision: https://phabricator.services.mozilla.com/D47553

UltraBlame original commit: c9450968c8fb58284ffc476acc24ca4d701c7f9f

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -7562,6 +7562,71 @@ selected
 )
 ;
 }
+xul
+|
+panel
+[
+type
+=
+"
+autocomplete
+-
+richlistbox
+"
+]
+{
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+background
+)
+;
+border
+:
+1px
+solid
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+border
+-
+color
+)
+;
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+text
+-
+color
+)
+;
+}
 /
 *
 Trees
